fairway-sf/force-app/main/default/objects/Game_Result__c/Game_Result__c.object-meta.xml
<CustomObject>
    <label>Game Result</label>
    <pluralLabel>Game Results</pluralLabel>
    <description>One record per participant per game session (Closest to Pin, Long Drive, Wolf, Vegas, etc). Only applies when Golf_Session__c.Session_Type__c = Game.</description>
    <nameField>
        <label>Game Result Name</label>
        <type>AutoNumber</type>
        <displayFormat>GR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>