fairway-sf/force-app/main/default/objects/Game_Result__c/fields/Game_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Type__c</fullName>
    <label>Game Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Closest to Pin</fullName><default>false</default><label>Closest to Pin</label></value>
            <value><fullName>Long Drive</fullName><default>false</default><label>Long Drive</label></value>
            <value><fullName>Wolf</fullName><default>false</default><label>Wolf</label></value>
            <value><fullName>Vegas</fullName><default>false</default><label>Vegas</label></value>
            <value><fullName>Stableford</fullName><default>false</default><label>Stableford</label></value>
            <value><fullName>Skills Challenge</fullName><default>false</default><label>Skills Challenge</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>