fairway-sf/force-app/main/default/objects/Game_Result__c/fields/Golf_Session__c.field-meta.xml
<CustomField>
    <fullName>Golf_Session__c</fullName>
    <label>Golf Session</label>
    <type>Lookup</type>
    <referenceTo>Golf_Session__c</referenceTo>
    <relationshipName>Game_Results</relationshipName>
    <relationshipLabel>Game Results</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>