fairway-sf/force-app/main/default/objects/Game_Result__c/fields/Result_Detail__c.field-meta.xml
<CustomField>
    <fullName>Result_Detail__c</fullName>
    <label>Result Detail</label>
    <type>Text</type>
    <length>255</length>
    <description>e.g. "142.3 yd from pin".</description>
</CustomField>