fairway-sf/force-app/main/default/objects/Game_Result__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Generic score field; meaning depends on Game_Type (e.g. yards for Long Drive, points for Wolf/Vegas).</description>
</CustomField>