fairway-sf/force-app/main/default/objects/Game_Result__c/fields/Session_Participant__c.field-meta.xml
<CustomField>
    <fullName>Session_Participant__c</fullName>
    <label>Session Participant</label>
    <type>Lookup</type>
    <referenceTo>Session_Participant__c</referenceTo>
    <relationshipName>Game_Results</relationshipName>
    <relationshipLabel>Game Results</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>